--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html>
 <header>
-    <h1>This is my github io site</h1>
-    </header>
     
-    </html>
+    </header>
+    <body>
+    <h1>This is my github io site</h1>
+    </body>
+</html>
